@@ -1,0 +1,61 @@
+<html>
+<head>
+  <style type="text/css">
+    .widget { 
+      width: 400px;
+      height: 200px;
+      margin: 10px auto;
+      padding: 4px;
+      border: 4px solid gray;
+    }
+
+    .IE-hidden-iframe {
+      position: absolute;
+      top: 0; left: 0;
+      width: 1px; height: 1px;
+      visibility: hidden;
+    }
+  </style>
+  <title>Embedded Wt</title>
+
+  <!-- You need this if you want to use Ext widgets:
+    -->
+  <!--[if gte IE 6]>
+  <script id="ie-deferred-loader" defer="defer" src="//:"></script>
+  <![endif]-->
+</head>
+<body>
+
+<!-- These hidden fields are needed for Wt's internal path API
+     and are optional.
+
+   If you use them, then append "&amp;Wt-history=Wt-history" to the Wt
+   script url, where Wt-history corresponds to the prefix of these fields:
+     Wt-history-iframe
+     Wt-history-field
+
+   The hidden iframe is only needed for Internet Explorer, so you can
+   make it conditional:
+-->
+<!--[if gte IE 6]>
+<iframe id="Wt-history-iframe" src="/hello.wtjs?resource=blank"
+        class="IE-hidden-iframe">
+</iframe> 
+<![endif]-->
+<input id="Wt-history-field" type="hidden"/>
+
+<!-- End hidden fields for Wt's internal path API -->
+
+<!--
+   We need a place holder for every widget to which we want to bind
+   a WContainerWidget in Wt
+  -->
+<div id="hello" class="widget">
+
+<!--
+   As the last step, we load our application.
+  -->
+<script src="/hello.wtjs?div=hello&amp;Wt-history=Wt-history"></script>
+
+</body>
+</html>
